--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             <div class="content">
               <h3>Who We Are</h3>
               <p>
-                Born 2021, Summa Logix is an excellence driven company focused on building digital products and solution needed to <strong>wow</strong> 
+                SummaLogix is an excellence driven company focused on building digital products and solution needed to <strong>wow</strong> 
                 customers experience in the 21st century.<br>
                  As a technology company, our strength is connecting customers feedback all around the globe with our great ideas to build sustainable and value adding products to meet their needs.
               </p>
